@@ -125,6 +125,7 @@
 	* Changed the search module to show a message instead of running into an exception when no Solr connections are configured
 	* Added feature #33763: Support for german compound words
 	* Updated schema.xml name
+	* Added a separate clear cache menu to initialize Solr connections instead of hooking into configuration cache clearing
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
